fix: add word-spacing to h1 and h2 elements

--- a/src/style.css
+++ b/src/style.css
@@ -38,6 +38,7 @@ body {
 h1,
 h2 {
   @apply font-heavy;
+  word-spacing: 0.5rem;
 }
 
 h2 {
